# ohtu-2021

viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/riippuvuuksien-injektointi-1/: pyproject.toml
viikko3/hello-robot/: pyproject.toml
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/hello-robot/src/tests/: reset_counter.robot
viikko3/login-robot/: pyproject.toml
viikko3/login-robot/src/: AppLibrary.py
viikko3/nhl-reader/: pyproject.toml
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/: pyproject.toml  run_robot_tests.sh
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/int-joukko/: pyproject.toml
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/mock-demo/: pyproject.toml
viikko4/tennis/: pyproject.toml
viikko4/tennis/src/: tennis_game.py
viikko4/verkkokauppa/: README.md  pyproject.toml
viikko5/: retro.md
viikko5/laskin/: pyproject.toml
viikko5/laskin/src/: kayttoliittyma.py
viikko6/: PULL.md
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: index.py  matchers.py  player.py  player_reader.py  querybuilder.py  statistics.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
(+7 files in other folders)
